[gd_scene load_steps=6 format=3 uid="uid://d2tjlf2ry1g0g"]

[ext_resource type="Script" path="res://scripts/UI/InteractionPromptUI.gd" id="1_ixi2l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7gy37"]
bg_color = Color(0.05, 0.05, 0.05, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id="Animation_tivvs"]
resource_name = "show"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_3a4sv"]
resource_name = "complete"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.2, 1, 0.2, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vf3wl"]
_data = {
"complete": SubResource("Animation_3a4sv"),
"show": SubResource("Animation_tivvs")
}

[node name="InteractionPromptUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ixi2l")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 40)
theme_override_styles/panel = SubResource("StyleBoxFlat_7gy37")

[node name="KeyIcon" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -25.0
offset_right = -55.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="KeyLabel" type="Label" parent="KeyIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PromptLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -25.0
offset_right = 85.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
text = "按E键交互"
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = 12.0
offset_right = 85.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
max_value = 100.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vf3wl")
} 